# pciw.py

./: .gitignore  LICENSE  README.md  README.rst  build.bat  builder.py  changelog.md  pyproject.toml  requirements.txt  setup.py  test.bat
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
pciw/: Converter.py  LinuxParser.py  PassParser.py  SupportHandler.py  Types.py  WindowsParser.py  __init__.py  __main__.py  conv.py  conv.pyi  exceptions.py  functions.py  models.py  pciw.py  tree.py  units.py
pciw.py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pciw/data/nsmi/Linux-x86_64/: nsmi
pciw/data/t_cpu/Windows/: parser.py
pciw/parsers/: Base.py  Linux.py  Windows.py  __init__.py
